app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
*/
@import "bootstrap-sprockets";
@import "bootstrap";
@import "codemirror";

// ------ Navbar styling below ------
a.navbar-brand {
  font-size: 3rem;
}

.navbar {
  font-size: 2rem;
}

.navbar-nav.mr-auto {
  margin: 0 auto;
}

.nav-item {
  margin: 0 50px;
}

.navbar-toggler {
  width: 50px;
  height: 50px;
}

.btn.btn-outline-success {
  font-size: 2rem;
  margin-left: 25px;
}

// ------ Homepage styling below ------
.banner,
.sign-up-form,
.log-in-form, {
  border: 10px;
  border-color: black;
  text-align: center;
}

#banner-image {
  max-width: 200%;
}

#signupnow {
  display: block;
}


// ------ Footer styling below ------
footer {
  text-align: center;
}

